Add test environment

--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "dropy-lambda-layer",
   "version": "1.0.0",
-  "description": "Serverless webpack example using Typescript",
-  "main": "handler.js",
+  "description": "Convert presentation file to image format",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "NODE_ENV=test ./node_modules/.bin/jest --ci --verbose",
+    "build": "tsc"
   },
   "dependencies": {
     "source-map-support": "^0.5.10"
@@ -14,6 +14,7 @@
     "@babel/preset-env": "^7.11.5",
     "@babel/preset-typescript": "^7.10.4",
     "@types/aws-lambda": "^8.10.17",
+    "@types/jest": "^26.0.14",
     "@types/node": "^10.12.18",
     "@types/serverless": "^1.72.5",
     "@typescript-eslint/eslint-plugin": "^4.4.0",
@@ -25,9 +26,12 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-module-resolver": "^1.0.0",
     "fork-ts-checker-webpack-plugin": "^3.0.1",
+    "husky": "^4.3.0",
     "jest": "^26.5.2",
+    "lint-staged": "^10.4.0",
     "serverless-offline": "^6.8.0",
     "serverless-webpack": "^5.2.0",
+    "ts-auto-mock": "^2.6.5",
     "ts-loader": "^5.3.3",
     "ts-node": "^8.10.2",
     "typescript": "^3.2.4",
@@ -36,5 +40,13 @@
     "webpack-node-externals": "^1.7.2"
   },
   "author": "The serverless webpack authors (https://github.com/elastic-coders/serverless-webpack)",
-  "license": "MIT"
+  "license": "MIT",
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{ts,js}": "eslint --cache --fix"
+  }
 }
