--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "tsc"
   },
   "dependencies": {
+    "aws-sdk": "^2.771.0",
     "source-map-support": "^0.5.10"
   },
   "devDependencies": {
