--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "aws-sdk": "^2.771.0",
+    "gm": "^1.23.1",
     "mime": "^2.4.6",
     "pdf-parse": "^1.1.1",
     "source-map-support": "^0.5.10"
@@ -17,6 +18,7 @@
     "@babel/preset-env": "^7.11.5",
     "@babel/preset-typescript": "^7.10.4",
     "@types/aws-lambda": "^8.10.17",
+    "@types/gm": "^1.18.9",
     "@types/jest": "^26.0.15",
     "@types/node": "^10.12.18",
     "@types/serverless": "^1.72.5",
@@ -27,6 +29,7 @@
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jest": "^24.1.0",
     "eslint-plugin-module-resolver": "^1.0.0",
     "fork-ts-checker-webpack-plugin": "^3.0.1",
     "husky": "^4.3.0",
