--- a/package.json
+++ b/package.json
@@ -26,14 +26,17 @@
     "babel-jest": "^26.5.2",
     "eslint": "^7.11.0",
     "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-config-prettier": "^7.2.0",
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jest": "^24.1.0",
     "eslint-plugin-module-resolver": "^1.0.0",
+    "eslint-plugin-prettier": "^3.3.1",
     "fork-ts-checker-webpack-plugin": "^3.0.1",
     "husky": "^4.3.0",
     "jest": "^26.5.2",
     "lint-staged": "^10.4.0",
+    "prettier": "^2.2.1",
     "serverless-offline": "^6.8.0",
     "serverless-webpack": "^5.2.0",
     "ts-auto-mock": "^2.6.5",
@@ -52,6 +55,8 @@
     }
   },
   "lint-staged": {
-    "*.{ts,js}": "eslint --cache --fix"
+    "*.{ts,js}": [
+      "eslint --cache --fix"
+    ]
   }
 }
