--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "repository": "https://github.com/dropy-online/serverless-pdf-converter.git",
   "author": "aereeeee <dofl5576@gmail.com>",
   "license": "Apache-2.0",
+  "main": "serverless.ts",
   "scripts": {
     "test": "NODE_ENV=test ./node_modules/.bin/jest --ci --verbose",
-    "start": "sls offline",
+    "start": "sls offline --disableCookieValidation",
     "deploy": "sls deploy --stage production",
     "build": "tsc"
   },
@@ -18,17 +19,13 @@
     "source-map-support": "^0.5.10"
   },
   "devDependencies": {
-    "@babel/core": "^7.11.6",
-    "@babel/preset-env": "^7.11.5",
-    "@babel/preset-typescript": "^7.10.4",
-    "@types/aws-lambda": "^8.10.17",
+    "@serverless/typescript": "^2.23.0",
+    "@types/aws-lambda": "^8.10.71",
     "@types/gm": "^1.18.9",
     "@types/jest": "^26.0.15",
-    "@types/node": "^10.12.18",
-    "@types/serverless": "^1.72.5",
+    "@types/node": "^14.14.31",
     "@typescript-eslint/eslint-plugin": "^4.4.0",
     "@typescript-eslint/parser": "^4.4.0",
-    "babel-jest": "^26.5.2",
     "eslint": "^7.11.0",
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-config-prettier": "^7.2.0",
@@ -37,20 +34,20 @@
     "eslint-plugin-jest": "^24.1.0",
     "eslint-plugin-module-resolver": "^1.0.0",
     "eslint-plugin-prettier": "^3.3.1",
-    "fork-ts-checker-webpack-plugin": "^3.0.1",
     "husky": "^4.3.0",
     "jest": "^26.5.2",
     "lint-staged": "^10.4.0",
     "prettier": "^2.2.1",
+    "serverless": "^2.23.0",
     "serverless-offline": "^6.8.0",
-    "serverless-webpack": "^5.2.0",
-    "ts-auto-mock": "^2.6.5",
-    "ts-loader": "^5.3.3",
-    "ts-node": "^8.10.2",
-    "typescript": "^3.2.4",
+    "serverless-webpack": "^5.3.5",
+    "ts-loader": "^8.0.15",
+    "ts-node": "^9.1.1",
+    "tsconfig-paths-webpack-plugin": "^3.3.0",
+    "typescript": "^4.1.3",
     "typescript-eslint": "0.0.1-alpha.0",
-    "webpack": "^4.29.0",
-    "webpack-node-externals": "^1.7.2"
+    "webpack": "^5.20.2",
+    "webpack-node-externals": "^2.5.2"
   },
   "husky": {
     "hooks": {
