--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "serverless": "^2.23.0",
     "serverless-offline": "^6.8.0",
     "serverless-webpack": "^5.3.5",
+    "ts-jest": "^26.5.1",
     "ts-loader": "^8.0.15",
     "ts-node": "^9.1.1",
     "tsconfig-paths-webpack-plugin": "^3.3.0",
