--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,26 +2,23 @@
   "extends": "./tsconfig.paths.json",
   "compilerOptions": {
     "lib": ["es2020"],
-    "removeComments": true,
     "moduleResolution": "node",
+    "allowSyntheticDefaultImports":true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
+    "removeComments": true,
+    "esModuleInterop": true,
     "sourceMap": true,
     "target": "es6",
-    "outDir": "lib",
-    "inlineSources": true,
-    "esModuleInterop": true,
-    "baseUrl": ".",
-    "paths": {
-      "@/*": ["src/*"],
-    }
+    "outDir": "lib"
   },
+  "include": ["src/**/*.ts", "serverless.ts"],
   "exclude": [
     "tests/*",
     "node_modules/**/*",
     ".serverless/**/*",
     ".webpack/**/*",
     "_warmup/**/*",
-    ".vscode/**/*",
+    ".vscode/**/*"
   ]
 }
